--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -76,3 +76,10 @@ logging.level.org.springframework.cloud.gateway=DEBUG
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers=*
+
+# ==========================================
+# RUTA PARA GEOAPI
+# ==========================================
+spring.cloud.gateway.routes[4].id=geoapi-service
+spring.cloud.gateway.routes[4].uri=http://geoapi-service:8080
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/distancia/**
